# tg_bot_adventure

./: .gitignore  GAME.md  README.md  aiogram_run.py  config.py  create_bot.py  db.py  game.db  handlers.py  kb.py  load_all.py  main.py  pyproject.toml
api/: __init__.py
bot/: __init__.py  handlers.py  msg_text.py
db/: db.py  load_all.py  utils.py
handlers/: start.py
